@@ -59,7 +59,8 @@ GUMPS_OBJS= Actor_gump.o  Book_gump.o  File_gump.o  Gump.o  Gump_button.o \
 	Spellbook_gump.o Stats_gump.o Text_gump.o  Yesno_gump.o \
 	Gamemenu_gump.o Newfile_gump.o Gump_ToggleButton.o \
 	AudioOptions_gump.o Face_button.o CombatStats_gump.o \
-	Jawbone_gump.o VideoOptions_gump.o Face_stats.o Gump_manager.o 
+	Jawbone_gump.o VideoOptions_gump.o Face_stats.o Gump_manager.o \
+	Text_button.o
 
 
 IMAGEWIN_OBJS=imagebuf.o imagewin.o iwin8.o ibuf8.o ibuf16.o imagescl.o \
